dom create/remove nodes

--- a/index.html
+++ b/index.html
@@ -5,21 +5,12 @@
         <title>Exploding Kittens</title>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/style.css">
+        <script src="/js/dom.js" charset="utf-8"></script>
     </head>
     <body>
         <nav>
             <img id="logo" src="images/exploding-kittens-logo.svg">
-            <ul class="menu">
-                <li>
-                    <a href="#about" id="aboutlink">Exploding Kittens</a>
-                </li>
-                <li>
-                    <a href="#cards">Cards</a>
-                </li>
-                <li>
-                    <a href="#rules">Rules</a>
-                </li>
-            </ul>
+            <!-- YOU DO: CREATE MENU -->
         </nav>
 
         <div class="main">
@@ -30,15 +21,6 @@
                 <a name="about">
                     <h2>About</h2>
                     <ul>
-                        <li>
-                            A CARD GAME FOR PEOPLE WHO ARE INTO
-                        </li>
-                        <li>
-                            KITTENS AND EXPLOSIONS AND LASER BEAMS
-                        </li>
-                        <li>
-                            AND SOMETIMES GOATS
-                        </li>
                     </ul>
                 </a>
             </div>
@@ -47,22 +29,8 @@
                 <a name="cards">
                     <h2>Cards</h2>
 
-                    <div class="cards-container">
-                        <div class="card">
-                            <h3>Explode</h3>
-                            <img src="/images/explode.png">
-                        </div>
-
-                        <div class="card">
-                            <h3>Defuse</h3>
-                            <img src="/images/defuse.png">
-                        </div>
-
-                        <div class="card">
-                            <h3>Nope</h3>
-                            <img src="/images/nope.png">
-                        </div>
-                    </div>
+                    <!-- WE DO -->
+                    <div class="cards-container"></div>
                 </a>
             </div>
 
